fix nav bar collapse, but main.css no longer working
it some

--- a/Custom CSS/main.css
+++ b/Custom CSS/main.css
@@ -1,124 +1,52 @@
 .jumbotron {
 	background-color:white;
-  font-color: blue;
+	font-color: blue;
 }
 
 }
 .jumbotron h1{
-    color:#fff;
-    font-size:48px;
-    font-weight:bold;
-    font-family:'shift',sans-serif;
+	color:#fff;
+	font-size:48px;
+	font-weight:bold;
+	font-family:'shift',sans-serif;
 }
 
 .neighborhood-guides { 
-  background-color:white;
-  padding-top: 20px;
-  padding-bottom: 20px; 
+	background-color:white;
+	padding-top: 20px;
+	padding-bottom: 20px; 
 }
 body { 
 	padding-top: 50px;
-  background-color:LightGray;  
+	background-color:LightGray;  
 }
 
 /* NOT MY CODE, Try to replace */
 .navbar-inverse {
-  background-color: #222222;
+	background-color: #222222;
 }
 
 .navbar-inverse .nav li a {
-
-  text-transform: uppercase;
-  font-weight: 400;
-  letter-spacing: 1px;
-  color: white;
+	text-transform: uppercase;
+	font-weight: 400;
+	letter-spacing: 1px;
+	color: white;
 }
-.navbar-inverse .nav li a:hover,
+.navbar-inverse .nav li a:hover,s
 .navbar-inverse .nav li a:focus {
-  color: #d3232a;
-  outline: none;
+	color: #d3232a;
+	outline: none;
 }
 .navbar-inverse .navbar-nav > .active > a {
-  border-radius: 0;
-  color: white;
-  background-color: #d3232a;
+	border-radius: 0;
+	color: white;
+	background-color: #d3232a;
 }
 
 
 
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
-  color: white;
-  background-color: #a71c21;
-}
-
-
-.portfolio-modal .modal-content {
-  border-radius: 0;
-  background-clip: border-box;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  border: none;
-  min-height: 100%;
-  padding: 100px 0;
-  text-align: center;
-}
-.portfolio-modal .modal-content h2 {
-  margin-bottom: 15px;
-  font-size: 3em;
-}
-.portfolio-modal .modal-content p {
-  margin-bottom: 30px;
-}
-.portfolio-modal .modal-content p.item-intro {
-  margin: 20px 0 30px;
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-style: italic;
-  font-size: 16px;
-}
-.portfolio-modal .modal-content ul.list-inline {
-  margin-bottom: 30px;
-  margin-top: 0;
-}
-.portfolio-modal .modal-content img {
-  margin-bottom: 30px;
-}
-.portfolio-modal .close-modal {
-  position: absolute;
-  width: 75px;
-  height: 75px;
-  background-color: transparent;
-  top: 25px;
-  right: 25px;
-  cursor: pointer;
-}
-.portfolio-modal .close-modal:hover {
-  opacity: 0.3;
-}
-.portfolio-modal .close-modal .lr {
-  height: 75px;
-  width: 1px;
-  margin-left: 35px;
-  background-color: #222222;
-  transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  /* IE 9 */
-  -webkit-transform: rotate(45deg);
-  /* Safari and Chrome */
-  z-index: 1051;
-}
-.portfolio-modal .close-modal .lr .rl {
-  height: 75px;
-  width: 1px;
-  background-color: #222222;
-  transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  /* IE 9 */
-  -webkit-transform: rotate(90deg);
-  /* Safari and Chrome */
-  z-index: 1052;
-}
-::-moz-selection {
-  text-shadow: none;
-  background: #d3232a;
+	color: white;
+	background-color: #a71c21;
 }
